--- a/static/index.html
+++ b/static/index.html
@@ -3,30 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./static/styles.css" />
+    <script src="./static/script.js"></script>
     <title>Video Broadcaster</title>
   </head>
   <body>
-    <div>
-      <div class="button">
-        <button onclick="startBroadcast()">List Devices</button>
-        <button onclick="startBroadcast()">Start Stream</button>
-        <button onclick="startBroadcast()">Stop Stream</button>
-      </div>
-      <div>
-        <label for="camera">Choose Camera</label>
-        <select id="camera"></select>
-        <label for="fps">FPS</label>
-        <input type="number" min="1" max="60" id="fps" value="15" />
-
-        <label for="blur">Blur Strength (odd number)</label>
-        <input type="range" min="1" max="52" id="blur" value="10" />
-
-        <label for="background">Background </label>
-        <select id="background">
-          <option value="none">No Background</option>
-          <option value="blur">Blur Background</option>
-          <option value="default">Default Background</option>
-        </select>
+    <div class="container">
+      <h1>Video Broadcaster</h1>
+      <div class="controls">
+        <div class="button-group">
+          <button onclick="getDevices()" class="btn">List Devices</button>
+          <button onclick="startStream()" class="btn">Start Stream</button>
+          <button onclick="stopStream()" class="btn">Stop Stream</button>
+        </div>
+        <div class="inputs-container">
+          <div class="input-group">
+            <label for="camera">Choose Camera</label>
+            <select id="camera" class="select-input"></select>
+          </div>
+          <div class="input-group">
+            <label for="fps">FPS</label>
+            <input
+              type="number"
+              min="1"
+              max="60"
+              id="fps"
+              value="15"
+              class="number-input"
+            />
+          </div>
+          <div class="input-group">
+            <label for="blur">Blur Strength</label>
+            <input
+              type="range"
+              min="1"
+              max="52"
+              id="blur"
+              value="10"
+              class="range-input"
+            />
+          </div>
+          <div class="input-group">
+            <label for="background">Background</label>
+            <select id="background" class="select-input">
+              <option value="none">No Background</option>
+              <option value="blur">Blur Background</option>
+              <option value="default">Default Background</option>
+            </select>
+          </div>
+        </div>
+        <div id="status">Status : Waiting for action...</div>
       </div>
     </div>
   </body>
